--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0"
+  },
+  "scripts": {
+    "dev": "bun --hot index.ts"
   }
 }
